Post-v3.7.0
--------------------


v3.7.0 - xx xxx xxxx
--------------------
   - AF_XDP:
     * AF_XDP support now requires Linux kernel v5.4+ or a nominally older
       distribution kernel with sufficient features backported.
     * Setting or reporting "use-need-wakeup" is no longer supported.  The
       feature is always enabled.
   - TLS:
     * Added support for TLS Server Name Indication (SNI) with the new
       --ssl-server-name option.  This allows specifying the server name
       for SNI, which is useful when connecting through proxies or service
       meshes where the connection endpoint differs from the intended
       server name.  Without this option, the hostname from the connection
       string is used for SNI, as before.
   - Userspace datapath:
     * Conntrack now supports the FTP commands EPSV and EPRT with IPv4
       connections, instead of limiting these commands to IPv6 only.
     * Userspace tunneling now supports multi-table and source-based routing
       using routing rules for selecting next hops after encapsulation.
   - DPDK:
     * Add support for DPDK 25.11.
   - Flow HW Offload:
     * New global configuration option 'other-config:hw-offload-priority'
       that allows to set the order of the hardware offload providers
       to try when multiple exist for a given datapath implementation.
     * New per-interface configuration option
       'other-config:hw-offload-priority' that allows to set order of the
       hardware offload providers or disable flow offloading on a particular
       interface.
   - OVSDB-IDL:
     * New ovsdb_idl_txn_assert_read_only() interface to mark transactions
       as read-only and trigger assertion failure when application attempts
       to modify the database data through this transaction.
   - ovs-appctl:
     * 'ovs/route/show': added new option, table=[ID|all], to list routes from
       a specific table or all routes from all tables.